- modified card generator to allow us to create placeholder cards with just numbers and images (and placeholder titles)

--- a/mtgen/wwwroot/util/card-exception-generator.html
+++ b/mtgen/wwwroot/util/card-exception-generator.html
@@ -41,7 +41,7 @@
         <input id="starting-card-num" size="100" maxlength="3" type="number" />
         <br />
         <br />
-        <label for="card-pattern">Card order patterns. Separate with commas, newlines, or both. Use x to skip an image.</label>
+        <label for="card-pattern">Card order patterns. Separate with commas, newlines, or both. Use x to skip an image or a to take an image with a placeholder title.</label>
         <br />
         <p>Examples:</p>
         <p>Land: <pre>     w250,u251,b252,r253,g254</pre></p>
