- now supports lines ending in 'x' without it thinking it should skip them - token importer now supports adding titles separate from the card type

--- a/mtgen/wwwroot/util/card-exception-generator.html
+++ b/mtgen/wwwroot/util/card-exception-generator.html
@@ -48,7 +48,7 @@
         <p>
             Tokens:
 <pre>
-     007|c|Token Artifact Creature|Thopter
+     007|c|Token Artifact Creature|Ancient Neuflyer|Thopter
      008|c|Token Artifact Creature|Thopter
      009|c|Token Artifact Creature|Thopter
      006|c|Token Artifact Creature|Servo
