- added new local data import so a new set can be constructed from previous sets

--- a/mtgen/wwwroot/util/card-data-importer.html
+++ b/mtgen/wwwroot/util/card-data-importer.html
@@ -42,7 +42,7 @@
         <input id="url-images" size="100" />
         <br />
         <br />
-        <label for="exceptions">Exceptions JSON that handles any parsing errors:</label>
+        <label for="exceptions">Exceptions JSON that handles any parsing errors or post-import data modifications:</label>
         <br />
         <textarea id="exceptions" cols="100" rows="20"></textarea>
         <br />
