- added "Marker" example so I wouldn't forgot how to do it in the future

--- a/mtgen/wwwroot/util/card-exception-generator.html
+++ b/mtgen/wwwroot/util/card-exception-generator.html
@@ -47,7 +47,7 @@
         <p>Land: <pre>     w250,u251,b252,r253,g254</pre></p>
         <p>
             Tokens:
-<pre>
+            <pre>
      007|c|Token Artifact Creature|Ancient Neuflyer|Thopter
      008|c|Token Artifact Creature|Thopter
      009|c|Token Artifact Creature|Thopter
@@ -59,7 +59,9 @@
      002|c|Token Artifact Creature|Construct
      010|c|Emblem|Chandra
      011|c|Emblem|Nissa
-     012|c|Emblem|Dovin</pre>
+     012|c|Emblem|Dovin
+     013|c|Marker|On an Adventure
+</pre>
         </p>
         <textarea id="card-pattern" cols="100" rows="20"></textarea>
         <br />
