Card data importer: Now suggested closest matching card images titles if no card data match found; they're usually typos.

--- a/mtgen/wwwroot/util/card-data-importer.html
+++ b/mtgen/wwwroot/util/card-data-importer.html
@@ -70,6 +70,7 @@
     </footer>
     <script src="/lib/mtg-generator-lib.js"></script>
     <script src="/util/js/card-data-importer.js"></script>
+    <script src="//unpkg.com/string-similarity/umd/string-similarity.min.js"></script>
     <script>
         'use strict';
         const cardDataImporter = new CardDataImporter();
