Card Exception Generator: now allows token imports with 000 in number to auto-number tokens

--- a/mtgen/wwwroot/util/card-exception-generator.html
+++ b/mtgen/wwwroot/util/card-exception-generator.html
@@ -46,7 +46,7 @@
         <p>Examples:</p>
         <p>Land: <pre>     w250,u251,b252,r253,g254</pre></p>
         <p>
-            Tokens:
+            Tokens (use 000 and set Starting Card Number to auto-number cards):
             <pre>
      007|c|Token Artifact Creature|Ancient Neuflyer|Thopter
      008|c|Token Artifact Creature|Thopter
