--- a/mtgen/wwwroot/util/card-data-importer.html
+++ b/mtgen/wwwroot/util/card-data-importer.html
@@ -10,6 +10,7 @@
     <img itemprop="image" src="http://mtgen.net/images/mtg-logo.jpg" />
     <p>This page imports card data from the <a href="http://www.gatheringmagic.com/" target="_blank">Gathering Magic spoiler list</a>, <a href="https://www.google.com/search?q=card+image+gallery+wizards+of+the+coast" target="_blank">WotC card images</a>, and <a href="http://mtgjson.com" target="_blank">mtgjson.com</a> to help create the Sealed Deck Card Generator pages for each release.</p>
     <ul>
+        <li>5-Apr-2021: Added import options.</li>
         <li>26-Feb-2017: Rewritten to use es6 instead of es5/backbone/jQuery.</li>
         <li>23-Jul-2016: Combined the settings and exceptons file into one.</li>
         <li>28-Jan-2016: Updated to add/use mtgenIds and associative arrays on "cards". Added </li>
@@ -38,11 +39,16 @@
         <br />
         <br />
         <label for="url-images">
-            URL from which to retrieve card images (Wizards of the Coast or mtgjson.com) <em>(If none supplied or no image match found, it'll use the card data image above. If no image at all, it'll generate a placeholder card.)</em>:<br/>
+            URL from which to retrieve card images (Wizards of the Coast or mtgjson.com) <em>(If none supplied or no image match found, it'll use the card data image above. If no image at all, it'll generate a placeholder card.)</em>:<br />
             Use <em>"http://url.com/etc/{{num:000}}/etc"</em> to import raw images from the target url with a particular digit format (e.g.: 000)
         </label>
         <br />
         <input id="url-images" size="100" />
+        <br />
+        <br />
+        <label for="import-options">Import options:</label>
+        <br />
+        <textarea id="import-options" cols="100" rows="5"></textarea>
         <br />
         <br />
         <label for="exceptions">Exceptions JSON that handles any parsing errors or post-import data modifications:</label>
@@ -82,6 +88,7 @@
                 cardDataUrl: document.getElementById('url-card-data').value
                 , htmlCardData: document.getElementById('html-card-data').value
                 , imagesUrl: document.getElementById('url-images').value
+                , importOptions: document.getElementById('import-options').value
                 , exceptions: document.getElementById('exceptions').value
                 , setCode: document.getElementById('set-code').value
             });
@@ -110,6 +117,7 @@
                 document.getElementById('set-code').value = finalSettings.setCode;
                 document.getElementById('url-card-data').value = finalSettings.cardDataUrl;
                 document.getElementById('url-images').value = finalSettings.imagesUrl;
+                document.getElementById('import-options').value = JSON.stringify(finalSettings.importOptions ?? {}, null, ' ');;
                 document.getElementById('exceptions').value = JSON.stringify(finalSettings.exceptions, null, ' ');
 
                 // rebuild the download file and attach it to the download link
@@ -124,6 +132,7 @@
                 document.getElementById('set-code').value,
                 document.getElementById('url-card-data').value,
                 document.getElementById('url-images').value,
+                document.getElementById('import-options').value,
                 document.getElementById('exceptions').value
             );
             const linkEl = document.getElementById('save-settings');
