Minor link update.

--- a/mtgen/wwwroot/util/card-data-importer.html
+++ b/mtgen/wwwroot/util/card-data-importer.html
@@ -7,7 +7,7 @@
 </head>
 <body class="home">
     <h1>JSON Magic: The Gathering Sealed Deck Card Generator Gathering Magic IMPORTER</h1>
-    <p>This page imports card data from the <a href="http://www.gatheringmagic.com/" target="_blank">Gathering Magic spoiler list</a>, <a href="https://www.google.com/search?q=card+image+gallery+wizards+of+the+coast" target="_blank">WotC card images</a>, and <a href="http://mtgjson.com" target="_blank">mtgjson.com</a> to help create the Sealed Deck Card Generator pages for each release.</p>
+    <p>This page imports card data from the <a href="https://mtgsalvation.com" target="_blank">MTG Salvation spoilers</a>, <a href="https://www.google.com/search?q=card+image+gallery+wizards+of+the+coast" target="_blank">WotC card image gallery spoilers</a>, and <a href="http://mtgjson.com" target="_blank">mtgjson.com</a> to help create the Sealed Deck Card Generator pages for each release.</p>
     <ul>
         <li>5-Apr-2021: Added import options.</li>
         <li>26-Feb-2017: Rewritten to use es6 instead of es5/backbone/jQuery.</li>
