UI docs for DFC import format

--- a/mtgen/wwwroot/util/card-exception-generator.html
+++ b/mtgen/wwwroot/util/card-exception-generator.html
@@ -35,7 +35,7 @@
         <input id="required-image-height" size="100" maxlength="3" type="number" value="370" />
         <br />
         <br />
-        <label for="starting-card-num">Starting card number:</label>
+        <label for="starting-card-num">Starting card number. WILL be used if set (leave blank to use your numbers below):</label>
         <br />
         <input id="starting-card-num" size="100" maxlength="3" type="number" />
         <br />
@@ -60,6 +60,8 @@
      011|c|Emblem|Nissa
      012|c|Emblem|Dovin
      013|c|Marker|On an Adventure
+
+     dfc|001|002   --> This tells it to make a double-faced card out of these two cards
 </pre>
         </p>
         <textarea id="card-pattern" cols="100" rows="20"></textarea>
