New set: MOM: March of the Machine
New set added.

Also a bunch of backend stuff:

Ha, I hadn't used this since I converted the site to node. I'm sure I left that for future me, which definitely appreciated it. Thanks, past me!
- allow static access to all /public
- created proxy endpoint for the util pages to import card data from other websites

Restart endpoint

- I have trouble on Dreamhost sometimes getting it to restart the node server (via Passenger) when I roll out new code, so I added a /restart?password=XXX endpoint. Password stored in .env file (obv not checked in)
- added .gitignore

Fixed bugs in importing art cards

Proxy fixes

- cors for cross-origin issues
- proxy caller now just returns empty string if no url provided

--- a/public/util/the-list-data-importer.html
+++ b/public/util/the-list-data-importer.html
@@ -19,7 +19,7 @@
         <input id="url-wotc-the-list-data" size="100" />
         <br />
         <br />
-        <label for="table-num">Table number within the article (defaults to the first one):</label>
+        <label for="table-num">Table number within the article (usually 3, but defaults to the first one):</label>
         <br />
         <input id="table-num" value="0" />
         <br />
